fix gallery distorting images

--- a/components/gallery/styles.module.css
+++ b/components/gallery/styles.module.css
@@ -7,8 +7,8 @@
 
 .grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-  grid-auto-rows: 350px;
+  grid-template-columns: repeat(2, minmax(300px, 1fr));
+  grid-auto-rows: auto;
   gap: 12px;
   grid-auto-flow: dense;
   width: 90%;
@@ -17,4 +17,10 @@
 .img:hover {
   transform: scale(1.1);
   transition: all 200ms cubic-bezier(0.445, 0.05, 0.55, 0.95);
+}
+
+@media screen and (max-width: 768px) {
+  .grid {
+    grid-template-columns: repeat(1, minmax(300px, 1fr));
+  }
 }
